--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p><h3>Service Tag: 8CG9331DF4</h3></p>
     <p>Model Number : HP ENVY x360 Convertible 13-ag0031au</p>
     <p>Serial Number : 8CG9331DF4</p>
-    <p>Current User : Chamara Amarasinghe</p>
+    <p>Current User : Shenara Lelwala</p>
     <p>CPU Configuration : Ryzen 5 2500U</p>
     <!--<p>MAC Address : 94-E2-3C-21-71-22</p>-->
     <p>Manufature Date : No data Found</p>
